Update to angular 6.0.3

--- a/angularSeo/src/tsconfig.app.json
+++ b/angularSeo/src/tsconfig.app.json
@@ -10,5 +10,8 @@
     "server.js",
     "test.ts",
     "**/*.spec.ts"
-  ]
+  ],
+  "angularCompilerOptions": {
+    "preserveWhitespaces": false
+  }
 }
