--- a/angularSeo/tsconfig.json
+++ b/angularSeo/tsconfig.json
@@ -15,9 +15,10 @@
       "es2017",
       "dom"
     ]
+
   },
   "angularCompilerOptions": {                             // Here
       "genDir": "./dist/ngfactory",
-      "entryModule": "./src/app/app.module#AppModule"
+      "entryModule": "./src/app/app.module#AppModule",
   }  
 }
