--- a/angularSeo/package.json
+++ b/angularSeo/package.json
@@ -12,6 +12,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "hmr": "ng serve --hmr --configuration=hmr",
     "compile_@agm_core": "babel node_modules/@agm/core -d node_modules/@agm/core --presets es2015",
     "watch": "nodemon -e ts -w ./src -x npm run watch:serve",
     "compile_@angular_core": "babel node_modules/@angular/core -d node_modules/@angular/core --presets es2015",
@@ -20,51 +21,55 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.2",
-    "@angular/animations": "^5.2.9",
-    "@angular/common": "^5.2.9",
-    "@angular/compiler": "^5.2.9",
-    "@angular/core": "^5.2.9",
-    "@angular/forms": "^5.2.9",
-    "@angular/http": "^5.2.9",
-    "@angular/platform-browser": "^5.2.9",
-    "@angular/platform-browser-dynamic": "^5.2.9",
-    "@angular/platform-server": "^5.2.9",
-    "@angular/router": "^5.2.9",
-    "@ng-bootstrap/ng-bootstrap": "^1.1.2",
-    "@nguniversal/module-map-ngfactory-loader": "^5.0.0",
+    "@agm/core": "^1.0.0-beta.3",
+    "@angular/animations": "^6.0.3",
+    "@angular/cli": "^6.0.5",
+    "@angular/common": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
+    "@angular/core": "^6.0.3",
+    "@angular/forms": "^6.0.3",
+    "@angular/http": "^6.0.3",
+    "@angular/platform-browser": "^6.0.3",
+    "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/platform-server": "^6.0.3",
+    "@angular/router": "^6.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
+    "@ngx-translate/core": "^10.0.2",
     "angular2-cookie": "^1.2.6",
     "angular2-jwt": "^0.2.3",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "core-js": "^2.5.5",
+    "core-js": "^2.5.7",
     "es6-promise": "^4.2.4",
     "jwt-decode": "^2.2.0",
-    "libphonenumber-js": "^1.1.9",
-    "rxjs": "^5.5.10",
-    "ts-loader": "^4.2.0",
+    "libphonenumber-js": "^1.2.12",
+    "rxjs": "^6.2.0",
+    "rxjs-tslint": "^0.1.4",
+    "ts-loader": "^4.3.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.4",
-    "@angular/compiler-cli": "^5.2.9",
-    "@angular/language-service": "^5.2.9",
+    "@angular-devkit/build-angular": "~0.6.5",
+    "@angular/compiler-cli": "^6.0.3",
+    "@angular/language-service": "^6.0.3",
+    "@angularclass/hmr": "^2.1.3",
     "@types/googlemaps": "^3.30.8",
-    "@types/jasmine": "~2.8.6",
+    "@types/jasmine": "^2.8.7",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~9.6.5",
-    "codelyzer": "~4.2.1",
+    "@types/node": "^10.1.2",
+    "codelyzer": "~4.3.0",
     "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "^2.0.2",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.2",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^1.0.0",
-    "protractor": "~5.3.1",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "2.8.1"
+    "karma-coverage-istanbul-reporter": "^2.0.1",
+    "karma-jasmine": "^1.1.2",
+    "karma-jasmine-html-reporter": "^1.1.0",
+    "protractor": "^5.3.2",
+    "ts-node": "~6.0.5",
+    "tslint": "^5.10.0",
+    "typescript": "2.7.2"
   }
 }
