--- a/ibar/package.json
+++ b/ibar/package.json
@@ -9,33 +9,33 @@
   },
   "dependencies": {
     "bcryptjs": "*",
-    "body-parser": "~1.18.2",
-    "cloudinary": "^1.10.0",
+    "body-parser": "^1.18.3",
+    "cloudinary": "^1.11.0",
     "cookie-parser": "~1.4.3",
     "cors": "*",
     "crypto": "^1.0.1",
     "debug": "~3.1.0",
     "dotenv": "^5.0.1",
-    "express": "^4.16.2",
-    "express-validator": "^5.0.2",
-    "google-libphonenumber": "^3.1.0",
-    "helmet": "^3.11.0",
-    "jsonwebtoken": "^8.1.1",
-    "libphonenumber-js": "^1.0.24",
+    "express": "^4.16.3",
+    "express-validator": "^5.2.0",
+    "google-libphonenumber": "^3.1.6",
+    "helmet": "^3.12.1",
+    "jsonwebtoken": "^8.2.1",
+    "libphonenumber-js": "^1.2.12",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
-    "nodemailer": "^4.6.0",
-    "nodemailer-mailgun-transport": "^1.3.6",
+    "nodemailer": "^4.6.5",
+    "nodemailer-mailgun-transport": "^1.4.0",
     "passport": "*",
-    "passport-jwt": "*",
-    "pg": "^7.4.1",
+    "passport-jwt": "^4.0.0",
+    "pg": "^7.4.3",
     "serve-favicon": "~2.5.0",
-    "winston": "^2.4.0"
+    "winston": "^2.4.2"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "istanbul": "^0.4.5",
-    "mocha": "^5.0.5",
-    "supertest": "^3.0.0"
+    "mocha": "^5.2.0",
+    "supertest": "^3.1.0"
   }
 }
